--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dsgygb\\Text2pic\\": "src"
+            "Text2pic\\": "src"
         }
     }
     
