--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,13 @@
         "psr-4": {
             "Text2pic\\": "src"
         }
-    }
+    },
+     "extra": {
+        "branch-alias": {
+            "dev-master": "1.1.x-dev"
+        }
+    },
+    
+
     
 }
